# course-scheduler

./: .gitignore  .golangci.yml  .prettierrc.json  AGENTS.md  CONTEXT.md  README.md  go.mod  go.sum  justfile  main.go  package-lock.json  package.json  pyproject.toml  repomix-output.xml  vite.config.js  wails.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  playwright.yml  test-backend.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: design.typ  summary.typ
docs/adr/: 0001-schedule-version-boundary.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/lib/: lib.typ
docs/plans/: 2026-05-31-schedule-workflow-breakdown.md  2026-05-31-session-queue.md
frontend/: .oxlintrc.json  index.html  package-lock.json  package.json  package.json.md5  playwright.config.js  vite.config.js
frontend/e2e/: smoke.spec.js
frontend/src/: App.vue  main.js
frontend/src/components/: ScheduleCard.vue  ScheduleCell.vue  ScheduleDetailDrawer.vue  (+4 more)
internal/backend/: app.go  import_export.go  models.go  schedule_plans.go  solver.go  solver_process_other.go  solver_process_windows.go  storage.go  storage_test.go
scripts/: prepare-solver.js
solver/: pyproject.toml  solver.py  solver.spec
solver/scripts/: prepare-solver.js
src/: App.vue  main.js
src-tauri/: .gitignore  Cargo.toml  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  auth.rs  db_handler.rs  file_handler.rs  import_export.rs  lib.rs  main.rs  models.rs  single_instance.rs
src/components/: ScheduleCell.vue
src/layouts/: MainLayout.vue
src/pages/: AuditLogs.vue  CampusTimetable.vue  CourseManagement.vue  Login.vue  Settings.vue  TeacherManagement.vue  TeacherTimetable.vue  UserManagement.vue  VenueManagement.vue
src/router/: index.js
src/stores/: auth.js  data.js
(+12 files in other folders)
