[project]
name = "course-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.14.6206",
    "pyinstaller>=6.14.1",
]

[tool.ty.environment]
python = ".venv"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
